# task_manager

./: .env.example  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml  pytest.ini  worker_entrypoint.sh
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml
api/: auth.py  email.py  email_api.py  kafka_producer.py
middleware/: token_middleware.py
notifications/: services.py
projects/: admin.py  models.py  notifications.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_remove_projectuser_user_email.py
projects/schemas/: dto.py
projects/tests/: conftest.py  test_services_projects.py  test_view_projects.py
task_manager/: celery_app.py  settings.py  urls.py
tasks/: admin.py  filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  validators.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_deadline.py  0002_alter_task_status.py
tasks/schemas/: dto.py
tasks/tests/: conftest.py  task_sorts_tasks.py  tesk_sorts_tasks.py  test_filter_tasks.py  test_serializers_tasks.py  test_services_tasks.py  test_view_tasks.py
tests/: always_true.py  conftest.py
tests/auth/: test_mock_response.py
tests/projects/: conftest.py  test_services_projects.py  test_view_projects.py
tests/tasks/: tesk_sorts_tasks.py  test_filter_tasks.py  test_services_tasks.py  test_view_tasks.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py
