[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["stepan <stepanlezennikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
django-environ = "^0.11.2"
psycopg = "^3.2.3"
ruff = "^0.8.2"
django = "^5.1.4"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
