[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["stepan <stepanlezennikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
psycopg = "^3.2.3"
django-environ = "^0.11.2"
celery = "^5.4.0"
redis = "^5.2.1"
django-celery-results = "^2.5.1"
jwt = "^1.3.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
mypy = "^1.14.1"
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
ruff = "^0.8.2"
django-stubs = "^5.1.1"
types-requests = "^2.32.0.20241016"
types-python-dateutil = "^2.9.0.20241206"
flake8 = "^7.1.1"
pylint = "^3.3.2"
freezegun = "^1.5.1"
django-celery-beat = "^2.7.0"
python-jose = "^3.3.0"
boto3 = "^1.35.89"
awscli = "^1.36.31"
django-debug-toolbar = "^4.4.6"
ipython = "^8.30.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
